# M2_cours_ingenieur_sante

./: pyproject.toml
data/: clinical_data_pbc.csv
